Code simplification.